# p1-playground

./: .gitignore  CMakeLists.txt  conanfile.txt  readme.md
lib-examples/: CMakeLists.txt  json-example.c  libcurl-example.c  pdcurses-example.c
main/: CMakeLists.txt
prototypes/: CMakeLists.txt
prototypes/marcus/: CMakeLists.txt
src/: CMakeLists.txt  api.c  api.h  api_p.h  common.h  coopapi.c  coopapi.h  itemapi.h  main.c  sorting_functions.c  sorting_functions.h  store.c  store.h  tjek_api.c  tjek_api.h  tjek_api_p.h
src/api/: coop_api.c  coop_api.h  location_api.c  location_api.h  location_api_p.h  tjek_api.c  tjek_api.h  tjek_api_p.h
src/ui/: main_view.c  main_view.h  results_view.c  results_view.h  shopping_list_view.c  shopping_list_view.h
src/ui/components/: arrow_menu.c  arrow_menu.h  table.c  table.h
src/util/: asprintf.h  curlext.c  curlext.h  dlist.c  dlist.h
test_prog/: CMakeLists.txt  test.c  test_items.c  test_location.c
